--- a/css/stilos.css
+++ b/css/stilos.css
@@ -1,3 +1,23 @@
-header{
-    background-color: grey !important;
+body{
+     font-family: 'Source Sans Pro', sans-serif;}
+
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Fjalla One', sans-serif;
+}
+
+h1{
+    font-size: 40px;
+    line-height: 150%;
+    letter-spacing: -0.2px;
+    text-transform: uppercase;
+    text-decoration: none;
+} 
+
+.hero{
+    height: 300px;
+}
+
+.project-details{
+    width: 500px;
+    height: 200px;
 }
