--- a/css/stilos.css
+++ b/css/stilos.css
@@ -1,3 +1,7 @@
+/*gris oscuro = #1da52c*/
+/*gris claro = # 626262*/
+/*background gris = #1b2127*/
+/*celeste = #026fff*/
 body{
      font-family: 'Source Sans Pro', sans-serif;}
 
@@ -9,15 +13,51 @@ h1{
     font-size: 40px;
     line-height: 150%;
     letter-spacing: -0.2px;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*//*hace que todo el texto este en mayúscula */
     text-decoration: none;
+
+    margin: 0;
 } 
 
 .hero{
     height: 300px;
+    background-image: url("/img/hero.jpg");
+    background-color: #1b2127 ;
+    background-size: 500px 300px;
+    background-repeat: no-repeat;
+    background-position-x: right;
+    color: white;
+
 }
 
+ol{
+    margin: 0;
+}
+
+.project{
+    /*border-top: tamaño tipo estilo;*/
+    border-color:gray;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+
+}
 .project-details{
     width: 500px;
     height: 200px;
+}
+
+strong{
+    color: #026fff;
+}  
+
+.header{
+    background-color: #1b2127;
+    color: white;
+}
+
+.header a {
+    color: white;
+    text-decoration: none;
 }
