--- a/css/stilos.css
+++ b/css/stilos.css
@@ -3,8 +3,11 @@
 /*background gris = #1b2127*/
 /*celeste = #026fff*/
 body{
-     font-family: 'Source Sans Pro', sans-serif;}
-
+    font-family: 'Source Sans Pro', sans-serif;
+    margin: 0;
+    
+}
+    
 h1,h2,h3,h4,h5,h6{
     font-family: 'Fjalla One', sans-serif;
 }
@@ -16,7 +19,7 @@ h1{
     /*text-transform: uppercase;*//*hace que todo el texto este en mayúscula */
     text-decoration: none;
 
-    margin: 0;
+      margin: 0;
 } 
 
 .hero{
@@ -34,14 +37,20 @@ ol{
     margin: 0;
 }
 
+.portfolio{
+    background-color: #fafafa;
+}
+
 .project{
     /*border-top: tamaño tipo estilo;*/
+    background-color: white;
     border-color:gray;
     border-style: solid;
     border-width: 1px;
     border-radius: 10px;
+    margin: 10px;
     margin-bottom: 15px;
-
+    padding: 20px; 
 }
 .project-details{
     width: 500px;
@@ -60,4 +69,28 @@ strong{
 .header a {
     color: white;
     text-decoration: none;
+}
+
+
+
+.flexbox{
+    display: flex;
+    /*flex-direction: column;*/ 
+    /*indica la dirección en que quiero que se presenten los
+    elementos en columna o en fila*/  
+
+    /*flex-wrap: nowrap;*/
+    flex-wrap: wrap; /*Cuando los elementos superan la cantidad 
+    de espacios ocupado en su eje X o fila pasa a la parte de
+    abajo a la siguiente columna*/
+     
+} 
+
+.box{
+    width: 200px;
+    height: 200px;
+    border: 1px solid red;
+    margin: 5px;
+    flex-shrink: 0;/*par que conserve su
+    tamaño asignado que son 200*200 px*/
 }
