--- a/css/stilos.css
+++ b/css/stilos.css
@@ -74,8 +74,9 @@ strong{
 
 
 .flexbox{
+    height: 250px;
     display: flex;
-    /*flex-direction: column;*/ 
+    flex-direction:row; 
     /*indica la dirección en que quiero que se presenten los
     elementos en columna o en fila*/  
 
@@ -83,14 +84,43 @@ strong{
     flex-wrap: wrap; /*Cuando los elementos superan la cantidad 
     de espacios ocupado en su eje X o fila pasa a la parte de
     abajo a la siguiente columna*/
-     
+
+
+    /*ALINEACIÓN DE ELEMENTOS DE FORMA HORIZONTAL*/
+    /*justify-content: flex-start;*/
+    /*justify-content: flex-end;*/
+    justify-content: center;
+    /*justify-content: space-around;*/
+    /*justify-content: space-between;*/
+    /*justify-content: space-evenly;*/
+
+    /*ALINEACIÓN DE ELEMENTOS DE FORMA HORIZONTAL*/
+    align-items: center;
+    /*align-items: flex-start;*/
+    /*align-items: flex-end;*/
+
+    /*NOTA: Cuando la propiedad flex-direction 
+    se ha definido como culumn, la propiedad
+    justify-content ya no va a aplicar sobre la 
+    alineación horizontal, sino sobre la vertical y 
+    aling-items ya no aplicara sobre la alineación 
+    vertical sino la horizontal, se intercabian sus efectos. 
+    */
 } 
 
 .box{
-    width: 200px;
-    height: 200px;
+    width: 50px;
+    height: 50px;
     border: 1px solid red;
     margin: 5px;
     flex-shrink: 0;/*par que conserve su
-    tamaño asignado que son 200*200 px*/
+    tamaño asignado que son 50*50 px*/
+}
+
+#caja1{
+    align-self:flex-start/*para modificar la posición de los hijos*/
+}
+
+#caja3{
+    align-self: flex-end;
 }
