--- a/css/stilos.css
+++ b/css/stilos.css
@@ -2,6 +2,8 @@
 /*gris claro = # 626262*/
 /*background gris = #1b2127*/
 /*celeste = #026fff*/
+
+
 body{
     font-family: 'Source Sans Pro', sans-serif;
     margin: 0;
@@ -18,11 +20,28 @@ h1{
     letter-spacing: -0.2px;
     /*text-transform: uppercase;*//*hace que todo el texto este en mayúscula */
     text-decoration: none;
-
-      margin: 0;
+     
+    margin: 0;
 } 
 
+
+h1 strong{
+    color: #026fff;
+}
+
+h2{
+    color:#026fff; 
+    text-transform: uppercase;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: bold;/*para qeu el testo este en negrita*/ 
+    font-size: 24px;
+    margin-bottom: 40px;
+}
+
 .hero{
+    display: flex;
+    margin: 0; 
+    align-items: center ;
     height: 300px;
     background-image: url("/img/hero.jpg");
     background-color: #1b2127 ;
@@ -39,39 +58,95 @@ ol{
 
 .portfolio{
     background-color: #fafafa;
+    padding: 20px;
 }
 
+
+
 .project{
+
+    display:flex;
+
     /*border-top: tamaño tipo estilo;*/
     background-color: white;
     border-color:gray;
     border-style: solid;
     border-width: 1px;
     border-radius: 10px;
-    margin: 10px;
+    /*margin: 10px;*/
     margin-bottom: 15px;
     padding: 20px; 
+    align-items: center;
+    justify-content: space-between;
 }
+.project-title{
+    font-size:30px;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+.project-course{
+    margin: 10px 0;
+}
+
+.project-date{
+    margin: 10px 0;
+}
+
+.project-url{
+    margin: 10px 0;
+}
+
 .project-details{
     width: 500px;
     height: 200px;
 }
 
-strong{
-    color: #026fff;
-}  
+.project strong{
+    font-family: 'Fjalla One', sans-serif;    
+}
+  
 
 .header{
     background-color: #1b2127;
     color: white;
+    display: flex;
+    height: 70px;
+    justify-content:space-between;
 }
 
 .header a {
+    display:flex;
+    align-items: center;
     color: white;
     text-decoration: none;
+    height:inherit;
+    padding: 0 10px;
 }
 
+ol,ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 
+.menu{
+    height: inherit;
+}
+.header ol{
+    display: flex;
+    height: inherit;
+}
+
+.header ol li{
+    height: inherit; 
+    display: flex;
+    align-items: center;
+}
+
+figure{
+    margin: 0;
+}
 
 .flexbox{
     height: 250px;
@@ -104,23 +179,44 @@ strong{
     justify-content ya no va a aplicar sobre la 
     alineación horizontal, sino sobre la vertical y 
     aling-items ya no aplicara sobre la alineación 
-    vertical sino la horizontal, se intercabian sus efectos. 
+    vertical sino la horizontal, se intercambian sus efectos. 
     */
 } 
 
+/*
 .box{
     width: 50px;
     height: 50px;
     border: 1px solid red;
     margin: 5px;
-    flex-shrink: 0;/*par que conserve su
-    tamaño asignado que son 50*50 px*/
+    flex-shrink: 0;
+    
+    ##par que conserve su tamaño asignado que son 50*50 px
 }
 
 #caja1{
-    align-self:flex-start/*para modificar la posición de los hijos*/
+    align-self:flex-start
+    
+    ##para modificar la posición de los hijos
 }
 
 #caja3{
     align-self: flex-end;
+}
+*/
+
+.footer{
+    background-color: #1b2127;
+    color:white;
+    display: flex;
+    align-items: center ; 
+    justify-content: space-between;
+}
+
+.footer img{
+    vertical-align: middle; /*para alinear el texto centrado junto con la imagen*/
+}
+
+.footer a{
+    color: white;
 }
