--- a/css/stilos.css
+++ b/css/stilos.css
@@ -24,6 +24,7 @@ h1{
     margin: 0;
 } 
 
+
 .hero{
     display: flex;
     align-items: center ;
@@ -34,7 +35,7 @@ h1{
     color: white;
     background-color: #1d252c ;
     box-shadow: 0 5px 10px #0e1011 inset;
-  background-image: url("/img/hero.jpg"); 
+  background-image: url("../img/hero.jpg"); 
   background-size: 700px 390px;
   background-repeat: no-repeat;
   background-position-x: right;
@@ -465,19 +466,19 @@ figure{
 }
 
 .social-link.twitter{
-    background-image:url("/img/twitter.svg");
+    background-image:url("../img/twitter.svg");
 }
 
 .social-link.facebook{
-    background-image:url("/img/facebook.svg");
+    background-image:url("../img/facebook.svg");
 }
 
 .social-link.github{
-    background-image:url("/img/github.svg");
+    background-image:url("../img/github.svg");
 }
 
 .social-link.instagram{
-    background-image:url("/img/instagram.svg");
+    background-image:url("../img/instagram.svg");
 }
 
 .form-email input{
@@ -487,7 +488,7 @@ figure{
     padding: 10px 10px 10px 50px;
     border-radius: 8px;
     border-style: solid;
-    background-image: url("/img/envelope.svg");
+    background-image: url("../img/envelope.svg");
     background-size: 20px 20px;
     background-repeat: no-repeat;
     background-position-y: center;
@@ -524,8 +525,6 @@ button:hover{
    
 }
 
-
-
 .footer{
     background-color: #1d252c;
     color:white;
@@ -557,7 +556,6 @@ button:hover{
     padding-bottom: 28px;
     height: 100px;
 }
-
 
 .TextoCurso{
     display: flex;
